# afit_staff_management_server

./: .gitignore  pyproject.toml  run
extras/: mobile_prefixes.json  tortoise.yml
management_server/: constants.py  controllers.py  forms.py  helpers.py  redis_cache.py  schemas.py  settings.py
management_server/controllers/: DeparmentControllers.py  UserControllers.py  __init__.py  base.py
management_server/exceptions/: __init__.py  excptions.py  handlers.py
management_server/models/: __init__.py  __main__.py  base.py  helpers.py  managers.py  models.py  validators.py
management_server/routers/: admin_routers.py  auth_routers.py  department_routers.py  staff_routers.py
management_server/server/: contstants.py  db.py  main.py  run.py  settings.py
management_server/utils/: __init__.py  model_helpers.py  utils.py  validators.py
scripts/: orm.py  orm_config.py  run
server/: settings.py
src/: main.py
src/server/: main.py
